# c97

./: CMakeLists.txt
src/game/: main.c
